--- a/07-11/package.json
+++ b/07-11/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^21.2.2",
+    "electron-builder": "^23.6.0",
     "express": "^4.18.2"
   }
 }
